k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  bus-network-deployment
  labels:
    name:  bus-network
spec:
  template:
    metadata:
      labels:
        name: bus-network
    spec:
      containers:
      - image:  bus-network:latest
        name:  bus-network
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  8080
          name:  bus-network
      restartPolicy: Always
      imagePullPolicy: Always
